2005-06-24  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Fixed query encoding for askLEO.

2005-06-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::Help): Rearranged the About dialog and
	added a Quick Help entry.

2005-06-16  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl:
	Fix tags for action messages.
	Cleanup members in ::tkjabber::cleanup as well.
	Correct some potential problems where a nick has a comma in it.
	Fix timestamp eliding and tabs in One-to-One chat.
	Allow register screen to work again.
	Clean up 'after' scripts when restarting.
	Add tk8.5a3 idle detection for AutoAway (from Kevin Kenny).

2005-06-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (tkjabber::cleanup): Cleanup roster too.

2005-06-14  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl:
	Fix conversion from old color list for some unusual nicks.
	Fix changing own color.
	Only save nicks that have extra attributes stored.
	Fix a problem with new messages getting mixed into history when it is
		being reloaded.
	Add autoscroll when showing/hiding extended text entry.
	Selecting to be alerted now activates some defaults if none set.
	Alerts now work for the nickname currently being used as well as the
		username.
	Remove another old tile-ism.
	Convert ::tkchat::msgSend calls to use ::tkjabber::msgSend.
	Convert ::tkchat::errLog proc calls to use ::log::log.
	Removed some orhaned procs.
	Clean up a lot of whitespace at start and end of lines.

2005-06-07  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Save only changed colors and invisibility settings in
	rc file instead of all of them. Change the way color information is
	stored to avoid a problem if someone calls themselves 'MainFG' etc.

2005-05-26  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl: Fixed some elide problems with regard to entry/exit,
	online/away, system, error and singledot messages, as well as